@startuml
left to right direction
title Datový model pokračujícího zdroje

class Library {
      String title
      String url
      String urlOfKramerius
}

class ISSN {
      String ISSN
      boolean isValid()
}

class OriginalFile {
      String url
      String format
      String filePath
}

class Author {
      String firstName
      String lastName
}

class PrintingFile {
      String url
      String format
      String filePath
}

class EPeriodicalFolder {
}

class EPeriodical {
      String title  "M21:245 $a"
      String subtitle "M21:245 $n $p"
      String edition "M21:490 $a"
      String volumeNumber
      String placeOfPublishing
      String publisher
      String publishedWithCoedition
      String publishedAtOrder
      String personWhoProcessedThis
}

class EPeriodicalPart {
      String bookBinding
      Decimal price
      String title
      String subtitle
      String part
      String partTitle
      String volumeNumber
      String placeOfPublishing
      String publisher
      Date   dateOfPublishing
      String publishedWithCoedition
      String publishedAtOrder
      String personWhoProcessedThis
      String categoryForRIV
}

Library "0..*" -- "0..*" EPeriodicalPart: canAccess >
EPeriodicalPart *-- "0..*" OriginalFile
EPeriodicalPart *-- "0..*" PrintingFile
EPeriodicalPart "0..*" *-- "0..*" Author
EPeriodical "1..*" *-- EPeriodicalPart
EPeriodical "1..*" *-- ISSN
EPeriodicalFolder "1..*" *-- EPeriodical

@enduml